--- a/docs/src/gui/gladevcp.adoc
+++ b/docs/src/gui/gladevcp.adoc
@@ -1780,7 +1780,7 @@ NOTE: LinuxCNC requires remapping of tool calls to actually use wear offsets.
 
 `tooleditor` has the following properties:
 
-font:: 
+font::
   Display font to use
 hide_columns::
   This will hide the given columns. +
@@ -2033,8 +2033,8 @@ The command string may use special keywords to access important functions.
 
 * 'ACTION' for access to the ACTION command library.
 * `GSTAT` for access to the Gstat status message library.
-* 'INFO' for access to collected data from the INI file. 
-* 'HAL' for access to the HAL linuxcnc Python module
+* 'INFO' for access to collected data from the INI file.
+* 'HAL' for access to the HAL linuxcnc Python module.
 * `STAT` for access to LinuxCNC's raw status via the LinuxCNC Python module.
 * `CMD` for access to LinuxCNC's commands via the LinuxCNC Python module.
 * `EXT` for access to the handler file functions if available.
