--- a/docs/src/hal/components.adoc
+++ b/docs/src/hal/components.adoc
@@ -266,7 +266,7 @@ the input is a position, this means that the 'position', 'velocity', and 'accele
 | link:../man/man9/gantrykins.9.html[gantrykins] |Kinematics module that maps one axis to multiple joints. ||
 | link:../man/man9/genhexkins.9.html[genhexkins] |Gives six degrees of freedom in position and orientation (XYZABC). The location of the motors is defined at compile time. ||
 | link:../man/man9/genserkins.9.html[genserkins] |Kinematics that can model a general serial-link manipulator with up to 6 angular joints. ||
-| link:../man/man9/gentrivkins.9.html[gentrivkins] |See link:../man/man9/trivkins.9.html[trivkins] ||
+| link:../man/man9/gentrivkins.9.html[gentrivkins] |1:1 correspondence between joints and axes. Most standard milling machines and lathes use the trivial kinematics module. ||
 | link:../man/man9/kins.9.html[kins] |Kinematics definitions for LinuxCNC. ||
 | link:../man/man9/lineardeltakins.9.html[lineardeltakins] |Kinematics for a linear delta robot ||
 | link:../man/man9/maxkins.9.html[maxkins] |Kinematics for a tabletop 5 axis mill named 'max' with tilting head (B axis) and horizontal rotary mounted to the table (C axis). Provides UVW motion in the rotated coordinate system. The source file, maxkins.c, may be a useful starting point for other 5-axis systems. ||
@@ -277,7 +277,6 @@ the input is a position, this means that the 'position', 'velocity', and 'accele
 | link:../man/man9/rotatekins.9.html[rotatekins] |The X and Y axes are rotated 45 degrees compared to the joints 0 and 1. ||
 | link:../man/man9/scarakins.9.html[scarakins] |Kinematics for SCARA-type robots. ||
 | link:../man/man9/tripodkins.9.html[tripodkins] |The joints represent the distance of the controlled point from three predefined locations (the motors), giving three degrees of freedom in position (XYZ). ||
-| link:../man/man9/trivkins.9.html[trivkins] |1:1 correspondence between joints and axes. Most standard milling machines and lathes use the trivial kinematics module. ||
 | link:../man/man9/userkins.9.html[userkins] |Template for user-built kinematics ||
 |===
 
